# root2

./: CMakeLists.txt  README.md
eapp/: Network1.cpp  Network1.h  Network2.cpp  Network2.h  Network3.cpp  Network3.h  batchnormalLayer.cpp  batchnormalLayer.h  batchnormalLayer2.cpp  batchnormalLayer2.h  convLayer.cpp  convLayer.h  convLayer2.h  crypto.cpp  crypto.h  eapp_utils.h  fcLayer.cpp  fcLayer.h  layers_bn.cpp  layers_bn.h  layers_bn2.cpp  layers_bn2.h  layers_ds.cpp  layers_ds.h  readdata1.cpp  readdata1.h  semaphore.h  split1.cpp  split2.cpp  split3.cpp  string.h  syscall.c  syscall.h  utils1.cpp  utils1.h  utils2.cpp  utils3.cpp  utils3.h
host/: enclave_expected_hash.h  host.cpp  sm_expected_hash.h
